Major updates to Direct Hello World Tutorial